crates/sotf-plugins/tests/snapshots/render_plan_snapshots__pnd__pnd__ipad_portrait.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "pnd",
  "width": 768.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "CORRECTION",
    "ANALYSIS",
    "FORMANTS"
  ],
  "overflow_group_ids": [],
  "config_controls": [],
  "main_groups": [
    {
      "id": "CORRECTION",
      "title": "CORRECTION",
      "controls": [
        {
          "param_index": 5,
          "param_name": "Reference Pitch",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            0.0,
            20000.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 0,
          "param_name": "Correction",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            2.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 2,
          "param_name": "Drift Time",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            0.001,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 4,
          "param_name": "Confidence Threshold",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "ANALYSIS",
      "title": "ANALYSIS",
      "controls": [
        {
          "param_index": 1,
          "param_name": "Analysis Window",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            20.0,
            500.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 3,
          "param_name": "Multi-Channel",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "FORMANTS",
      "title": "FORMANTS",
      "controls": [
        {
          "param_index": 6,
          "param_name": "Formant Preservation",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 7,
          "param_name": "Formant Strength",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
